--- a/ws-field-jean-service/pom.xml
+++ b/ws-field-jean-service/pom.xml
@@ -23,13 +23,12 @@
                 <artifactId>spring-boot-starter-web</artifactId>
             </dependency>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-tomcat</artifactId>
-                <scope>provided</scope>
+                <groupId>com.shop</groupId>
+                <artifactId>ws-field-jean-persistence-postgres</artifactId>
             </dependency>
             <dependency>
                 <groupId>com.shop</groupId>
-                <artifactId>ws-field-jean-persistence-postgres</artifactId>
+                <artifactId>ws-field-jean-persistence-security</artifactId>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -51,6 +50,29 @@
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>com.shop</groupId>
+                <artifactId>ws-field-jean-persistence-security</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     <build>
